change background color

--- a/styles.css
+++ b/styles.css
@@ -8,8 +8,9 @@
 }
 
 body {
-  width: min(100% - 2rem, 68ch);
+  width: min(var(--max-width), 100% - var(--body-padding));
   margin: 0 auto;
+  background-color: aqua;
   color: var(--color-text);
   font-family: var(--font);
 }
