--- a/styles.css
+++ b/styles.css
@@ -15,6 +15,8 @@ body {
 }
 
 footer {
+  display: flex;
+  justify-content: center;
   margin-top: 2rem;
   color: var(--color-text-light);
   font-size: 0.8rem;
