--- a/styles.css
+++ b/styles.css
@@ -10,6 +10,7 @@
 body {
   width: min(100% - 2rem, 68ch);
   margin: 0 auto;
+  background-color: blue;
   color: var(--color-text);
   font-family: var(--font);
 }
